# Hygie-AI

./: .coverage  .coveragerc  .env.example  .gitignore  .helmignore  .pre-commit-config.yaml  .windsurfrules  README.md  conftest.py  coverage.xml  docker-compose.yaml  docker-compose.yml  multipart.py  package-lock.json  prometheus.yml  prometheus_client.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
backend/: architecture.md  microservices-development-plan.md  standards-techniques.md  test_bmp_service.py
nginx/: nginx.conf
scripts/: generate_all_ap.py
tests/: test_algorithm_repository.py  test_algorithm_repository_extended.py  test_anticholinergic.py  test_anticholinergic_extended.py  test_anticholinergic_extended2.py  test_api_integration.py  test_auth_endpoints.py  test_bdpm_loader.py  test_bdpm_loader_extended.py  test_benchmarks.py  test_bmp_endpoints.py  test_config.py  test_conftest_fixtures.py  test_database.py  test_drug_repository.py  test_drug_repository_static.py  test_fhir_bundle.py  test_fhir_bundle_extended.py  test_integration_cascade_generate.py  test_integration_ensemble_generate.py  test_integration_llm_load.py  test_interactions_ref.py  test_interactions_ref_extended.py  test_interactions_ref_extended2.py  test_llm_orchestration.py  test_llm_orchestration_workflow.py  test_llm_orchestrator.py  test_llm_orchestrator_extended.py  test_main_endpoints.py  test_main_endpoints_extended.py  test_metrics.py  test_metrics_and_fallback.py  test_normalization_extended.py  test_profiling.py  test_prometheus_client.py  test_renal.py  (+8 more)
(+127 files in other folders)
