[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygie-ai"
version = "0.2.0"
description = "Hygie-AI Shared Medication Review Service"
readme = "README.md"
authors = [ { name = "ssebb" } ]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.dependencies]
fastapi = "0.110.2"
uvicorn = { extras = ["standard"], version = "0.29.0" }
pydantic = "2.7.1"
torch = ">=2.2"
transformers = ">=4.40"
accelerate = ">=0.27"
httpx = ">=0.27"
pyyaml = ">=6.0"
prometheus_client = ">=0.20"
pandas = ">=2.2"
pdfminer.six = ">=20221105"
"python-jose[cryptography]" = ">=3.3"
fhir.resources = ">=7.2"

[project.scripts]
bmp_service = "bmp_service.main:app"

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", "backend/.venv"]
